# memegen

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  main.py
app/models/: template.py  text.py
app/routes/: images.py  templates.py
app/utils/: images.py  text.py
templates/absolute-cinema/: config.yml
templates/aj-styles-undertaker/: config.yml
templates/all-my-homies-hate/: config.yml
templates/always-has-been/: config.yml
templates/american-chopper-argument/: config.yml
templates/anakin-padme/: config.yml
templates/ancient-aliens/: config.yml
templates/anime-girl-hiding/: config.yml
templates/batman-slap/: config.yml
templates/bell-curve/: config.yml
templates/bernie/: config.yml
templates/bet-hes-thinking/: config.yml
templates/bike-fall/: config.yml
templates/blank-nut-button/: config.yml
templates/boardroom-meeting/: config.yml
templates/buff-doge-vs-cheems/: config.yml
templates/buzz/: config.yml
templates/change-my-mind/: config.yml
templates/charlie-conspiracy/: config.yml
templates/clown-applying-makeup/: config.yml
templates/competition/: config.yml
templates/days-without/: config.yml
templates/disappointed-black-guy/: config.yml
templates/disaster-girl/: config.yml
templates/distracted/: config.yml
templates/domino-effect/: config.yml
templates/drake/: config.yml
templates/epic-handshake/: config.yml
templates/evil-kermit/: config.yml
templates/expanding-brain/: config.yml
templates/finding-neverland/: config.yml
(+69 files in other folders)
